--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "express-flash": "^0.0.2",
+    "express-flash-notification": "^0.5.0",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.16",
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.11",
+    "postcss": "8.1",
+    "resolve-url-loader": "3.1.2",
+    "sass": "^1.32.6",
+    "sass-loader": "8.*"
   }
 }
